cmake_minimum_required(VERSION 3.21)
project(Algorithm_geekbang_fifth)

set(CMAKE_CXX_STANDARD 14)

add_executable(ltc26_remove_duplicates_from_sorted_array week01/example/ltc26_remove_duplicates_from_sorted_array.cpp)
add_executable(ltc283_move_zeroes week01/example/ltc283_move_zeroes.cpp)
add_executable(ltc88_merge_sorted_array week01/example/ltc88_merge_sorted_array.cpp)
add_executable(ltc206_reverse_linked_list week01/example/ltc206_reverse_linked_list.cpp)
add_executable(acwing146 week01/example/acwing146.cpp)
add_executable(ltc20_valid_parentheses week01/example/ltc20_valid_parentheses.cpp)
add_executable(ltc155_min_stack week01/example/ltc155_min_stack.cpp)
add_executable(ltc150_evaluate_reverse_polish_notation week01/example/ltc150_evaluate_reverse_polish_notation.cpp)